Sculpt: Box Hide tool keymap option "Outside" not working #116389

Closed
opened 2023-12-20 18:50:37 +01:00 by TheRedWaxPolice · 1 comment

System Information
Operating system: Win 10

Blender Version
Broken: blender-4.1.0-alpha+main.69d22a42d06f-windows.amd64-release
Worked: 4.0.3 RC

Short description of error
In the keymap settings of the Box Hide tool there's an option called "Visibility Area" that allows you to choose which vertices to hide (inside/outside the selection etc)...
Well, the "Outside" option is not working... when you choose it, it still hides the vertices inside the selection...

Exact steps for others to reproduce the error

  • Go to Preferences/Keymap/3D View/Sculpt
  • Expand the Box Hide tool keymap settings
  • Expand the first "Hide/Show" settings in there
  • Change the "Visibility Area" option to "Outside" and try the tool

See the wrong result (it still hides the vertices inside the selection) in 4.1.0 alpha:
Alt text

Here's the correct behavior (Hiding the vertices outside the selection) in 4.0.3 RC:
Alt text

**System Information** Operating system: Win 10 **Blender Version** Broken: blender-4.1.0-alpha+main.69d22a42d06f-windows.amd64-release Worked: 4.0.3 RC **Short description of error** In the keymap settings of the Box Hide tool there's an option called "Visibility Area" that allows you to choose which vertices to hide (inside/outside the selection etc)... Well, the "Outside" option is not working... when you choose it, it still hides the vertices inside the selection... **Exact steps for others to reproduce the error** * Go to Preferences/Keymap/3D View/Sculpt * Expand the Box Hide tool keymap settings * Expand the first "Hide/Show" settings in there * Change the "Visibility Area" option to "Outside" and try the tool See the wrong result (it still hides the vertices inside the selection) in 4.1.0 alpha: [![Alt text](https://cdn.discordapp.com/attachments/587761956526751784/1187076781845532742/4.1_alpha.gif)](https://cdn.discordapp.com/attachments/587761956526751784/1187076781845532742/4.1_alpha.gif) Here's the correct behavior (Hiding the vertices outside the selection) in 4.0.3 RC: [![Alt text](https://cdn.discordapp.com/attachments/587761956526751784/1187087620610727967/4.0.3_RC.gif)](https://cdn.discordapp.com/attachments/587761956526751784/1187087620610727967/4.0.3_RC.gif)
TheRedWaxPolice added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2023-12-20 18:50:38 +01:00
Member

Thanks for the report. I can confirm, checking.

Thanks for the report. I can confirm, checking.
Pratik Borhade self-assigned this 2023-12-21 08:07:12 +01:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-12-21 14:04:40 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-23 06:27:25 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#116389
No description provided.