Fix #116389: Sculpt: Box Hide tool keymap option "Outside" not working

Both inside/outside was hiding verts that are within `isect_point_planes_v3`
For VisArea::Outside, verts outside the box should be hidden (same for
"show"). This can be fixed by `is_effected` function (Last statement returns
true for VisArea::Inside when verts are inside box and for
VisArea::Outside when verts are outside the box)